<resources>
    <string name="app_name">hotel</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="phoneNumber">Registered Phone</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="already_have_an_account_login" />
    <string name="already_have_an_account_logi">Already_have_an_account_login</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_name">Enter Name</string>
    <string name="what_services_might_you_need">What Services might you need</string>
    <string name="choose_hotel">Choose Hotel</string>
    <string name="scroll_and_choose_hotel">Scroll and choose hotel</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="chat">Chat</string>
    <string name="bookedservices">BookedServices</string>
    <string name="current_location">Current Location</string>
    <string name="choose_your_drinks_and_meals">Choose your drinks and meals</string>
    <string name="check_our_cleaning_services">Check our Cleaning Services</string>
    <string name="catering_services">Catering Services</string>
    <string name="cleaning_services">Cleaning Services</string>
    <string name="logistics_services">Logistics Services</string>"
    <string name="Selected_logistics">Selected Logistics</string>
    <string name="breakfast">Breakfast</string>
    <string name="forgot_password">Forgot Password?</string>"
    <string name="title_onboarding_1">Welcome to Onboarding App !</string>
    <string name="description_onboarding_1">Here is an open-source project which shows sweet &amp; original onboarding ViewPagers that follows Material Design Guidelines</string>

    <string name="title_onboarding_2">Try AirBnB Lottie</string>
    <string name="description_onboarding_2">We use Lottie Animations on our Intro to make it interactive &amp; pleasant. Did you already tried it ? If no, let\'s start now. It\'s just awesome</string>

    <string name="title_onboarding_3">Code beautiful apps</string>
    <string name="description_onboarding_3">Our mission is to make useful &amp; subtle apps. We love help people to save time with open-source stuffs, but we also make life easier by creating new things. Good Coding!</string>

    <string name="start_text_advice">By continuing on this application you agree to our Terms of Use and Privacy Policy</string>
    <string name="start">start</string>
    <string name="skip">Skip</string>
    <string name="finish">finish</string>
    <string name="next">next</string>
    <string name="back">back</string>
    <string-array name="Logistics">
        <item>Aeroplane</item>
        <item>Personal Vehicle</item>
        <item>Company Vehicle</item>
        <item>Motorbike</item>

    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="don_t_have_an_account_sign_up_now">Don\'t have an account? Sign up now.</string>
    <string name="pizzaimage">PizzaImage</string>
    <string name="addtocart">Add To Cart</string>
    <string name="add">Add</string>
    <string name="price">Price</string>
    <string name="order_summary">Order Summary</string>
    <string name="burgers_ordered">Burgers Ordered:</string>
    <string name="subtotal">Subtotal:</string>
    <string name="_0_00">$0.00</string>
    <string name="cartitemprice">Price</string>
    <string name="burgersection">BurgerSection</string>
    <string name="place_order">Place Order</string>
    <string name="order_has_been_placed_successfully">Order Has Been Placed Successfully</string>
    <string name="ok">Ok</string>
    <string name="remove_from_cart">Remove From Cart</string>
    <string name="add_to_cart">AddToCart</string>
    <string name="add_to_cart1">Add to Cart</string>
    <string name="proceed_to_cart">Proceed to Cart</string>
    <string name="booking">Booking</string>


</resources>