<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background"
    android:layout_gravity="center"
    tools:context=".SignupActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="540dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/custom_edittext"
            android:backgroundTint="@color/white"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/RegisterText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_edittext"
                android:text="@string/register"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="36sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/etemail"
                android:autofillHints="emailAddress"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="8dp"
                android:hint="@string/email"
                android:textStyle="bold"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:autofillHints="Pass@123"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:textStyle="bold"
                android:inputType="textPassword"
                android:textColor="@color/black" />
            <EditText
                android:id="@+id/confPassword"
                android:autofillHints="Pass@123"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:textColor="@color/black" />


            <Button
                android:id="@+id/SignUpButton"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/purple"
                android:text="@string/register"
                android:textAlignment="center"
                android:textSize="18sp"
                app:cornerRadius="20dp" />

            <Button
                android:id="@+id/LoginButton"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/purple"
                android:text="@string/login"
                android:textAlignment="center"
                android:textSize="18sp"
                app:cornerRadius="30dp" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>
